# Uchat

./: Makefile  bot.sh  client.key  client.pem  db.c  server.csr  server.key  server.pem  uchat  uchat.db  uchat_server
Client msavytskyi/: Makefile  uchat
Client msavytskyi/inc/: client.h
Client msavytskyi/src/: exta_transport.c  main_cilent.c
blevishche/: CMakeLists.txt
blevishche/client/: Makefile  uchat
blevishche/client/inc/: client.h
blevishche/server/: Makefile  uchat_server
blevishche/server/inc/: server.h
blevishche/server/src/: mx_demon.c  mx_soket_handler.c
blevishche/server/src/test/: mx_soket_handler.c
ccirtifacate/: client.csr
client/: Makefile  chat.glade  chat_client  resources.c  uchat
client/gld/: chat.glade  login.glade  old_chat.glade  sign_up.glade  start.glade
client/inc/: chat.h  client.h
client/src/: Makefile  add_message.c  chat.c  client.c  dark_style.css  delete.c  edit.c  extra.c  free.c  gtk_extra.c  gtk_history.c  history.c  history_2.c  input_mess_style.css  login.c  login.glade  main.c  mx_report_tls.c  other_mess_style.css  (+8 more)
code/: mx_soket_handler.c  server.h
libjson/: Makefile  config.h  json.h  src.txt
libmx/: Makefile
libressl-3.2.0/: Makefile  config.status  libcrypto.pc  libssl.pc  libtls.pc  libtool  openssl.pc
rcirtificate/: root.csr  root.key  root.pem  root.srl
server/: Makefile  uchat.db  uchat_server
uchat/: Makefile  chat.c  chat.glade  chat_client  client.gresource.xml  login.c  login.glade  login.h  main.c  resources.c  sign_up.c  sign_up.glade  sign_up.h  start.c  start.glade  start.h
(+139 files in other folders)
